@@ -1,3 +1,7 @@
+2019-05-08 Magnus Hagdorn
+ * piccolo3/common/PiccoloSpectra.py: add method to apply non-linearity
+   correction
+
 2019-03-05 Magnus Hagdorn
  * piccolo3/common/__init__.py: loadd new module
  * piccolo3/common/piccoloLogging.py: move logging module from server
